--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "@vanilla-extract/css": "^1.17.0"
   }
 }
