chore(github/workflow): 리뷰어 선정 시 슬랙 알림 workflow 에러를 수정해요.

--- a/.github/workflows/pr-reviewer-noti.yml
+++ b/.github/workflows/pr-reviewer-noti.yml
@@ -20,7 +20,7 @@ jobs:
             const mention = context.payload.pull_request.requested_reviewers.map((user) => {
                 const login = user.login;
                 const mappedValue = workers[login];
-                return mappedValue ? <@${mappedValue}> : No mapping found for ${login};
+                return mappedValue ? `<@${mappedValue}>` : `No mapping found for ${login}`;
             });
             return mention.join(', ');
           result-encoding: string
