--- a/.github/workflows/pr-reviewer-noti.yml
+++ b/.github/workflows/pr-reviewer-noti.yml
@@ -3,16 +3,20 @@ name: PR Reviewer Notification
 on:
   pull_request:
     types: [review_requested]
+  issue_comment:
+    types: [created]
+  pull_request_review_comment:
+    types: [created]
 
 jobs:
   specific_review_requested:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Get Reviewers List
         id: reviewers
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs');
