--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.17.0",
+    "@vanilla-extract/recipes": "^0.5.5",
     "react": "^18"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
-    "esbuild": "^0.24.0",
-    "@vanilla-extract/esbuild-plugin": "^2.3.5"
+    "@vanilla-extract/esbuild-plugin": "^2.3.5",
+    "esbuild": "^0.24.0"
   },
   "peerDependencies": {
     "react": "^18.2.0"
