--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,8 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@repo/theme": "workspace:^",
+    "@repo/ui": "workspace:^",
     "next": "14.2.21",
     "react": "^18",
     "react-dom": "^18"
