--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -25,7 +25,6 @@
   "devDependencies": {
     "@vanilla-extract/esbuild-plugin": "^2.3.5",
     "esbuild": "^0.24.0",
-    "esbuild-plugin-preserve-directives": "^0.0.11",
-    "esbuild-plugin-svgr": "^3.1.0"
+    "esbuild-plugin-preserve-directives": "^0.0.11"
   }
 }
