--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,9 +14,7 @@
     "@repo/ui": "workspace:^",
     "next": "14.2.21",
     "react": "^18",
-    "react-dom": "^18",
-    "@vanilla-extract/css": "^1.17.0",
-    "@vanilla-extract/recipes": "^0.5.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -25,7 +23,6 @@
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
     "@vanilla-extract/next-plugin": "^2.4.8",
-    "eslint": "^8",
     "eslint-config-next": "14.2.21",
     "typescript": "5.5.4"
   }
