--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,9 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -12,7 +15,9 @@
   "scripts": {
     "build": "tsc && node esbuild.config.mjs",
     "dev": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.mjs --watch",
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "build:icons": "esbuild src/scripts/generate-icon-map.ts --bundle --platform=node --outdir=dist/scripts",
+    "generate:icons": "pnpm run build:icons && node dist/scripts/generate-icon-map.js"
   },
   "dependencies": {
     "@repo/theme": "workspace:^",
@@ -21,12 +26,17 @@
     "react": "^18"
   },
   "devDependencies": {
+    "@repo/theme": "workspace:*",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.0",
     "@vanilla-extract/esbuild-plugin": "^2.3.5",
     "esbuild": "^0.21.0",
-    "esbuild-plugin-preserve-directives": "^0.0.11"
+    "esbuild-plugin-preserve-directives": "^0.0.11",
+    "esbuild-plugin-svgr": "^3.1.0",
+    "ts-node": "^10.9.2"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18",
+    "react-dom": "^18"
   }
 }
