--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,7 @@
     "@repo/theme": "workspace:^",
     "@vanilla-extract/css": "^1.17.0",
     "@vanilla-extract/recipes": "^0.5.5",
+    "overlay-kit": "^1.4.1",
     "react": "^18"
   },
   "devDependencies": {
