--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,13 +14,14 @@
     "@repo/theme": "workspace:^",
     "@repo/ui": "workspace:^",
     "next": "14.2.21",
+    "overlay-kit": "^1.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "@repo/theme": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@repo/ui": "workspace:*",
     "@types/node": "^20.11.24",
     "@types/react": "18.3.0",
