--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,9 +21,10 @@
   },
   "dependencies": {
     "@repo/theme": "workspace:^",
+    "@types/react-dom": "18.3.1",
     "@vanilla-extract/css": "^1.17.0",
     "@vanilla-extract/recipes": "^0.5.5",
-    "overlay-kit": "^1.4.1",
+    "motion": "^11.17.0",
     "react": "^18"
   },
   "devDependencies": {
@@ -37,7 +38,6 @@
     "ts-node": "^10.9.2"
   },
   "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18"
   }
 }
