--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.21",
     "overlay-kit": "^1.4.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
