--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,6 +9,7 @@
     ".": {
       "import": "./dist/index.js"
     },
+    "./LottieAnimation": "./dist/components/LottieAnimation/LottieAnimation.js",
     "./styles": "./dist/index.css"
   },
   "scripts": {
@@ -16,7 +17,9 @@
     "dev": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.mjs --watch",
     "lint": "eslint . --max-warnings 0",
     "build:icons": "esbuild src/scripts/generate-icon-map.ts --bundle --platform=node --outdir=dist/scripts",
-    "generate:icons": "pnpm run build:icons && node dist/scripts/generate-icon-map.js"
+    "generate:icons": "pnpm run build:icons && node dist/scripts/generate-icon-map.js",
+    "build:lotties": "esbuild src/scripts/generate-lottie-map.mts --bundle --platform=node --outdir=dist/scripts",
+    "generate:lotties": "pnpm run build:lotties && node dist/scripts/generate-lottie-map.js"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
