--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,8 @@
     "overlay-kit": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "@vanilla-extract/css": "^1.17.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -28,6 +29,7 @@
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
     "@vanilla-extract/next-plugin": "^2.4.8",
+    "@vanilla-extract/recipes": "^0.5.5",
     "eslint-config-next": "14.2.21",
     "typescript": "5.5.4"
   }
