fix(packages/theme, packages/ui): ThemeProvider 이동

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,6 +10,8 @@
       "import": "./dist/index.js"
     },
     "./LottieAnimation": "./dist/components/LottieAnimation/LottieAnimation.js",
+    "./provider": "./dist/provider/index.js",
+    "./hooks": "./dist/hooks/index.js",
     "./styles": "./dist/index.css"
   },
   "scripts": {
