[Fix]: ThemeProvider 패키지 이동, 불필요 배럴 파일 정리 (#74)
* wip

* chore(apps/web): 파일 구조 변경

* chore(packages/theme, apps/web): 배럴파일 정리 및 provider 별도 export

* chore(packages/theme): provider 별도 export

* fix(packages/theme, packages/ui): ThemeProvider 이동

* remove(apps/web): 퍼블리싱 삭제 (별도 PR 예정)

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,6 +10,8 @@
       "import": "./dist/index.js"
     },
     "./LottieAnimation": "./dist/components/LottieAnimation/LottieAnimation.js",
+    "./provider": "./dist/provider/index.js",
+    "./hooks": "./dist/hooks/index.js",
     "./Spinner": "./dist/components/Spinner/Spinner.js",
     "./styles": "./dist/index.css"
   },
@@ -26,10 +28,10 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@repo/theme": "workspace:^",
     "@types/react-dom": "18.3.1",
-    "@vanilla-extract/css": "^1.17.0",
-    "@vanilla-extract/recipes": "^0.5.5",
     "motion": "^11.17.0",
-    "react": "^18"
+    "react": "^18",
+    "@vanilla-extract/css": "^1.17.0",
+    "@vanilla-extract/recipes": "^0.5.5"
   },
   "devDependencies": {
     "@repo/theme": "workspace:*",
