--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,20 +6,72 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
-    ".": {
-      "import": "./dist/index.js"
-    },
     "./LottieAnimation": "./dist/components/LottieAnimation/LottieAnimation.js",
     "./provider": "./dist/provider/index.js",
     "./hooks": "./dist/hooks/index.js",
     "./Spinner": "./dist/components/Spinner/Spinner.js",
-    "./styles": "./dist/index.css"
+    "./styles": "./dist/index.css",
+    "./IconButton": {
+      "types": "./dist/components/IconButton/index.d.ts",
+      "import": "./dist/components/IconButton/index.js",
+      "require": "./dist/components/IconButton/index.cjs"
+    },
+    "./Spacing": {
+      "types": "./dist/components/Spacing/index.d.ts",
+      "import": "./dist/components/Spacing/index.js",
+      "require": "./dist/components/Spacing/index.cjs"
+    },
+    "./Icon": {
+      "types": "./dist/components/Icon/index.d.ts",
+      "import": "./dist/components/Icon/index.js",
+      "require": "./dist/components/Icon/index.cjs"
+    },
+    "./Toast": {
+      "types": "./dist/components/Toast/index.d.ts",
+      "import": "./dist/components/Toast/index.js",
+      "require": "./dist/components/Toast/index.cjs"
+    },
+    "./Text": {
+      "types": "./dist/components/Text/index.d.ts",
+      "import": "./dist/components/Text/index.js",
+      "require": "./dist/components/Text/index.cjs"
+    },
+    "./Button": {
+      "types": "./dist/components/Button/index.d.ts",
+      "import": "./dist/components/Button/index.js",
+      "require": "./dist/components/Button/index.cjs"
+    },
+    "./Badge": {
+      "types": "./dist/components/Badge/index.d.ts",
+      "import": "./dist/components/Badge/index.js",
+      "require": "./dist/components/Badge/index.cjs"
+    },
+    "./Checkbox": {
+      "types": "./dist/components/Checkbox/index.d.ts",
+      "import": "./dist/components/Checkbox/index.js",
+      "require": "./dist/components/Checkbox/index.cjs"
+    },
+    "./Label": {
+      "types": "./dist/components/Label/index.d.ts",
+      "import": "./dist/components/Label/index.js",
+      "require": "./dist/components/Label/index.cjs"
+    },
+    "./Breadcrumb": {
+      "types": "./dist/components/Breadcrumb/index.d.ts",
+      "import": "./dist/components/Breadcrumb/index.js",
+      "require": "./dist/components/Breadcrumb/index.cjs"
+    },
+    "./TextField": {
+      "types": "./dist/components/TextField/index.d.ts",
+      "import": "./dist/components/TextField/index.js",
+      "require": "./dist/components/TextField/index.cjs"
+    }
   },
   "scripts": {
     "build": "tsc && node esbuild.config.mjs",
     "dev": "esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.mjs --watch",
     "lint": "eslint . --max-warnings 0",
-    "build:icons": "esbuild src/scripts/generate-icon-map.ts --bundle --platform=node --outdir=dist/scripts",
+    "build:icons": "esbuild src/scripts/generate-icon-map.mts --bundle --platform=node --outdir=dist/scripts",
     "generate:icons": "pnpm run build:icons && node dist/scripts/generate-icon-map.js",
     "build:lotties": "esbuild src/scripts/generate-lottie-map.mts --bundle --platform=node --outdir=dist/scripts",
     "generate:lotties": "pnpm run build:lotties && node dist/scripts/generate-lottie-map.js"
@@ -28,10 +80,10 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@repo/theme": "workspace:^",
     "@types/react-dom": "18.3.1",
-    "motion": "^11.17.0",
-    "react": "^18",
     "@vanilla-extract/css": "^1.17.0",
-    "@vanilla-extract/recipes": "^0.5.5"
+    "@vanilla-extract/recipes": "^0.5.5",
+    "motion": "^11.17.0",
+    "react": "^18"
   },
   "devDependencies": {
     "@repo/theme": "workspace:*",
@@ -39,6 +91,8 @@
     "@types/react": "^18.2.0",
     "@vanilla-extract/esbuild-plugin": "^2.3.5",
     "esbuild": "^0.21.0",
+    "esbuild-plugin-alias": "^0.2.1",
+    "esbuild-plugin-copy": "^2.1.1",
     "esbuild-plugin-preserve-directives": "^0.0.11",
     "esbuild-plugin-svgr": "^3.1.0",
     "ts-node": "^10.9.2"
