--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,18 +13,19 @@
   "dependencies": {
     "@repo/theme": "workspace:^",
     "@repo/ui": "workspace:^",
+    "@vanilla-extract/css": "^1.17.0",
     "next": "14.2.21",
     "overlay-kit": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.54.2",
-    "@vanilla-extract/css": "^1.17.0"
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/theme": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.11.24",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
