--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,65 +6,68 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
-    "./LottieAnimation": "./dist/components/LottieAnimation/LottieAnimation.js",
-    "./provider": "./dist/provider/index.js",
-    "./hooks": "./dist/hooks/index.js",
-    "./Spinner": "./dist/components/Spinner/Spinner.js",
-    "./styles": "./dist/index.css",
+    "./LottieAnimation": {
+      "types": "./dist/components/LottieAnimation/index.d.ts",
+      "import": "./dist/components/LottieAnimation/index.js"
+    },
+    "./provider": {
+      "types": "./dist/provider/index.d.ts",
+      "import": "./dist/provider/index.js"
+    },
+    "./hooks": {
+      "types": "./dist/hooks/index.d.ts",
+      "import": "./dist/hooks/index.js"
+    },
+    "./Spinner": {
+      "types": "./dist/components/Spinner/index.d.ts",
+      "import": "./dist/components/Spinner/index.js"
+    },
+    "./styles": {
+      "import": "./dist/index.css"
+    },
     "./IconButton": {
       "types": "./dist/components/IconButton/index.d.ts",
-      "import": "./dist/components/IconButton/index.js",
-      "require": "./dist/components/IconButton/index.cjs"
+      "import": "./dist/components/IconButton/index.js"
     },
     "./Spacing": {
       "types": "./dist/components/Spacing/index.d.ts",
-      "import": "./dist/components/Spacing/index.js",
-      "require": "./dist/components/Spacing/index.cjs"
+      "import": "./dist/components/Spacing/index.js"
     },
     "./Icon": {
       "types": "./dist/components/Icon/index.d.ts",
-      "import": "./dist/components/Icon/index.js",
-      "require": "./dist/components/Icon/index.cjs"
+      "import": "./dist/components/Icon/index.js"
     },
     "./Toast": {
       "types": "./dist/components/Toast/index.d.ts",
-      "import": "./dist/components/Toast/index.js",
-      "require": "./dist/components/Toast/index.cjs"
+      "import": "./dist/components/Toast/index.js"
     },
     "./Text": {
       "types": "./dist/components/Text/index.d.ts",
-      "import": "./dist/components/Text/index.js",
-      "require": "./dist/components/Text/index.cjs"
+      "import": "./dist/components/Text/index.js"
     },
     "./Button": {
       "types": "./dist/components/Button/index.d.ts",
-      "import": "./dist/components/Button/index.js",
-      "require": "./dist/components/Button/index.cjs"
+      "import": "./dist/components/Button/index.js"
     },
     "./Badge": {
       "types": "./dist/components/Badge/index.d.ts",
-      "import": "./dist/components/Badge/index.js",
-      "require": "./dist/components/Badge/index.cjs"
+      "import": "./dist/components/Badge/index.js"
     },
     "./Checkbox": {
       "types": "./dist/components/Checkbox/index.d.ts",
-      "import": "./dist/components/Checkbox/index.js",
-      "require": "./dist/components/Checkbox/index.cjs"
+      "import": "./dist/components/Checkbox/index.js"
     },
     "./Label": {
       "types": "./dist/components/Label/index.d.ts",
-      "import": "./dist/components/Label/index.js",
-      "require": "./dist/components/Label/index.cjs"
+      "import": "./dist/components/Label/index.js"
     },
     "./Breadcrumb": {
       "types": "./dist/components/Breadcrumb/index.d.ts",
-      "import": "./dist/components/Breadcrumb/index.js",
-      "require": "./dist/components/Breadcrumb/index.cjs"
+      "import": "./dist/components/Breadcrumb/index.js"
     },
     "./TextField": {
       "types": "./dist/components/TextField/index.d.ts",
-      "import": "./dist/components/TextField/index.js",
-      "require": "./dist/components/TextField/index.cjs"
+      "import": "./dist/components/TextField/index.js"
     }
   },
   "scripts": {
