--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,7 +13,8 @@
     "./provider": "./dist/provider/index.js",
     "./hooks": "./dist/hooks/index.js",
     "./Spinner": "./dist/components/Spinner/Spinner.js",
-    "./styles": "./dist/index.css"
+    "./styles": "./dist/index.css",
+    "./utils": "./dist/utils/index.js"
   },
   "scripts": {
     "build": "tsc && node esbuild.config.mjs",
@@ -28,10 +29,11 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@repo/theme": "workspace:^",
     "@types/react-dom": "18.3.1",
-    "motion": "^11.17.0",
-    "react": "^18",
     "@vanilla-extract/css": "^1.17.0",
-    "@vanilla-extract/recipes": "^0.5.5"
+    "@vanilla-extract/recipes": "^0.5.5",
+    "motion": "^11.17.0",
+    "overlay-kit": "^1.4.1",
+    "react": "^18"
   },
   "devDependencies": {
     "@repo/theme": "workspace:*",
