feat(packages/ui): 컴포넌트 전체 export 추가

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,9 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
+    ".": {
+      "import": "./dist/index.js"
+    },
     "./LottieAnimation": "./dist/components/LottieAnimation/LottieAnimation.js",
     "./Spinner": "./dist/components/Spinner/Spinner.js",
     "./provider": {
