--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -80,7 +80,8 @@
     "./Skeleton": {
       "types": "./dist/components/Skeleton/index.d.ts",
       "import": "./dist/components/Skeleton/index.js"
-    }
+    },
+    "./utils": "./dist/utils/index.js"
   },
   "scripts": {
     "build": "tsc && node esbuild.config.mjs",
