--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@repo/theme": "workspace:^",
     "@repo/ui": "workspace:^",
     "@vanilla-extract/css": "^1.17.0",
+    "motion": "^11.17.0",
     "next": "14.2.21",
     "overlay-kit": "^1.4.1",
     "react": "^18",
