--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,9 +18,7 @@
       "types": "./dist/hooks/index.d.ts",
       "import": "./dist/hooks/index.js"
     },
-    "./styles": {
-      "import": "./dist/index.css"
-    },
+    "./styles": "./dist/index.css",
     "./IconButton": {
       "types": "./dist/components/IconButton/index.d.ts",
       "import": "./dist/components/IconButton/index.js"
