chore(apps/web): baseUrl 설정

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,19 +2,11 @@
   "extends": "@repo/typescript-config/nextjs.json",
   "compilerOptions": {
     "paths": {
-      "@web/*": [
-        "./src/*"
-      ]
+      "@web/*": ["./src/*"]
     },
+    "baseUrl": "./",
     "allowJs": true
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
