--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@repo/theme": "workspace:^",
     "@repo/ui": "workspace:^",
+    "@tanstack/react-query": "^5.66.0",
     "@vanilla-extract/css": "^1.17.0",
     "motion": "^11.17.0",
     "next": "14.2.21",
