chore(.github/workflows): env 추가

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: CI-Build
 
+env:
+  NEXT_PUBLIC_SERVER_BASE_URL: ${{secrets.NEXT_PUBLIC_SERVER_BASE_URL }}
+
 on:
   pull_request:
     branches: [main, develop]
