--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@repo/theme": "workspace:^",
     "@repo/ui": "workspace:^",
+    "@tanstack/react-query": "^5.66.0",
     "@vanilla-extract/css": "^1.17.0",
+    "cookies-next": "^5.1.0",
+    "ky": "^1.7.4",
     "motion": "^11.17.0",
     "next": "14.2.21",
     "overlay-kit": "^1.4.1",
