--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@vanilla-extract/css": "^1.17.0",
     "cookies-next": "^5.1.0",
     "ky": "^1.7.4",
+    "emoji-picker-react": "^4.12.0",
     "motion": "^11.17.0",
     "next": "14.2.21",
     "overlay-kit": "^1.4.1",
