--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,13 +11,16 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@repo/theme": "workspace:^",
     "@repo/ui": "workspace:^",
     "@tanstack/react-query": "^5.66.0",
     "@vanilla-extract/css": "^1.17.0",
     "cookies-next": "^5.1.0",
-    "ky": "^1.7.4",
     "emoji-picker-react": "^4.12.0",
+    "ky": "^1.7.4",
     "motion": "^11.17.0",
     "next": "14.2.21",
     "overlay-kit": "^1.4.1",
