--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@repo/theme": "workspace:^",
     "@repo/ui": "workspace:^",
     "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query-devtools": "^5.66.0",
     "@vanilla-extract/css": "^1.17.0",
     "cookies-next": "^5.1.0",
     "emoji-picker-react": "^4.12.0",
