--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -87,6 +87,10 @@
       "types": "./dist/components/Accordion/index.d.ts",
       "import": "./dist/components/Accordion/index.js"
     },
+    "./LineButton": {
+      "types": "./dist/components/LineButton/index.d.ts",
+      "import": "./dist/components/LineButton/index.js"
+    },
     "./utils": "./dist/utils/index.js"
   },
   "scripts": {
