--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "ky": "^1.7.4",
     "motion": "^11.17.0",
     "next": "14.2.21",
+    "next-auth": "^4.24.11",
     "overlay-kit": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
