--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "next": "14.2.21",
     "overlay-kit": "^1.4.1",
     "react": "^18",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2"
   },
